# keypad-go-firmware

./: Cargo.toml  README.mkdn  memory.x  openocd.cfg  package.sh  rust-toolchain.toml
.cargo/: config
src/: flash.rs  i2c.rs  keypad.rs  main.rs  scanner.rs  serial.rs  util.rs
