[package]
name = "keybad-fw"
version = "1.0.0"
edition = "2021"

[features]
default = ["panic-halt", "stm32g030"]
stm32c011 = ["stm32-metapac/stm32c011f6"]
stm32g030 = ["stm32-metapac/stm32g030f6"]
board-v1 = []
board-v2 = []

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.3"
futures = { version = "0.3.28", default-features = false, features = ["async-await"] }
as-slice = "0.2.1"
corncobs = "0.1.3"
zerocopy = "0.6.1"
panic-halt = {optional = true, version = "0.2.0"}
panic-semihosting = {optional = true, version = "0.6.0"}
cfg-if = "1.0"
crc = "3.0.1"
serde = { version = "1.0.163", features = ["derive"], default-features = false }
hubpack = "0.1.2"
enum-map = "2.5.0"
scopeguard = { version = "1.1.0", default-features = false }

[dependencies.lilos]
version = "0.3.6"
default-features = false
features = ["spsc", "systick", "mutex", "handoff"]

[dependencies.stm32-metapac]
default-features = false
features = ["rt", "pac"]
version = "11.0"

[profile.dev]
opt-level = 1  # we don't fit at 0, and check is nice

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = "z"
overflow-checks = true # should be the default grr

[[bin]]
name = "keybad-fw"
test = false
bench = false
